--- a/granota-backend/config/packages/security.yaml
+++ b/granota-backend/config/packages/security.yaml
@@ -44,12 +44,39 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: ^/api/markers, roles: IS_AUTHENTICATED_FULLY}
-        - { path: ^/api/login, roles: PUBLIC_ACCESS }
-        - { path: ^/api/register, roles: PUBLIC_ACCESS }
+        # Login i registre sense autenticació
+        - { path: ^/api/login$, roles: PUBLIC_ACCESS }
+        - { path: ^/api/register$, roles: PUBLIC_ACCESS }
+
+        # Llistar tots els marcadors
+        - { path: ^/api/markers$, roles: PUBLIC_ACCESS, methods: [GET]}
+
+        # Permitir veure un marcador
+        - { path: ^/api/markers/\d+$, roles: PUBLIC_ACCESS, methods: [GET]}
+
+        # Crear marcadors (Sols autenticats)
+        - { path: ^/api/markers$, roles: ROLE_USER, methods: [POST] }
+
+        # Usuaris autenticats poden editar o esborrar marcadors
+        - { path: ^/api/markers/\d+$, roles: ROLE_USER, methods: [PUT, DELETE]}
+
+        # Sols revisors poden afegir notes
+        - { path: ^/api/markers/\d+/note$, roles: ROLE_REVISOR, methods: [POST] }
+
+        # Usuaris autenticats poden accedir al perfil
+        - { path: ^/api/profile, roles: IS_AUTHENTICATED_FULLY }
+
+        # Sols administradors
+        - { path: ^/api/admin, roles: ROLE_ADMIN }
+        
+        # Qualsevol altra ruta a la api requereix autenticació
         - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+
+        
+
+        
+
+        
 
 when@test:
     security:
