--- a/granota-backend/composer.json
+++ b/granota-backend/composer.json
@@ -12,6 +12,7 @@
         "doctrine/doctrine-fixtures-bundle": "^4.1",
         "doctrine/doctrine-migrations-bundle": "^3.4",
         "doctrine/orm": "^3.3",
+        "league/csv": "*",
         "lexik/jwt-authentication-bundle": "^2.21",
         "nelmio/cors-bundle": "^2.5",
         "symfony/console": "6.4.*",
