Usuarios visitantes pueden ver los marcadores y la información, pero no dejar ningun comentario. Los propietarios de los marcadores pueden eliminar sus propios marcadores, usuarios administradores pueden eliminarlos todos. Añadidos iconos para ver más y eliminar marcadores en los popups

--- a/granota-backend/config/packages/security.yaml
+++ b/granota-backend/config/packages/security.yaml
@@ -54,6 +54,9 @@ security:
         # Permitir veure un marcador
         - { path: ^/api/markers/\d+$, roles: PUBLIC_ACCESS, methods: [GET]}
 
+        #Ruta pública per a poder veure els comentaris de les publicacions
+        - { path: ^/api/markers/\d+/notes$, roles: PUBLIC_ACCESS, methods: [GET]}
+        
         # Crear marcadors (Sols autenticats)
         - { path: ^/api/markers$, roles: ROLE_USER, methods: [POST] }
 
@@ -61,7 +64,7 @@ security:
         - { path: ^/api/markers/\d+$, roles: ROLE_USER, methods: [PUT, DELETE]}
 
         # Sols revisors poden afegir notes
-        - { path: ^/api/markers/\d+/note$, roles: ROLE_REVISOR, methods: [POST] }
+        - { path: ^/api/markers/\d+/notes$, roles: ROLE_REVISOR, methods: [POST] }
 
         # Usuaris autenticats poden accedir al perfil
         - { path: ^/api/profile, roles: IS_AUTHENTICATED_FULLY }
