--- a/granota-backend/config/packages/security.yaml
+++ b/granota-backend/config/packages/security.yaml
@@ -64,7 +64,7 @@ security:
         - { path: ^/api/markers/\d+$, roles: ROLE_USER, methods: [PUT, DELETE]}
 
         # Sols revisors poden afegir notes
-        - { path: ^/api/markers/\d+/notes$, roles: ROLE_REVISOR, methods: [POST] }
+        - { path: ^/api/markers/\d+/notes$, roles: ['ROLE_REVISOR','ROLE_ADMIN'], methods: [POST] }
 
         # Usuaris autenticats poden accedir al perfil
         - { path: ^/api/profile, roles: IS_AUTHENTICATED_FULLY }
