--- a/granota/package.json
+++ b/granota/package.json
@@ -16,8 +16,10 @@
     "core-js": "^3.8.3",
     "leaflet": "^1.9.4",
     "postcss": "^8.5.3",
+    "sweetalert2": "^11.22.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
+    "vue-sweetalert2": "^5.0.11",
     "vue-toastification": "^2.0.0-rc.5",
     "vuex": "^4.0.0"
   },
